tg-2742 popup triage administrativo

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.html
@@ -76,7 +76,7 @@
 								</button>
 
 								<mat-menu #actions="matMenu">
-									<button id="nuevo-triage" mat-menu-item (click)="nuevoTriage()">
+									<button id="nuevo-triage" mat-menu-item (click)="nuevoTriage(episode)">
 										{{ 'guardia.home.episodes.episode.actions.NUEVO_TRIAGE' | translate }}
 									</button>
 
