tg-2840. [BE] Implementar endpoint para generar pdf

--- a/back-end/hospital-api/src/main/resources/templates/flavors/minsal/daily-appointments.html
+++ b/back-end/hospital-api/src/main/resources/templates/flavors/minsal/daily-appointments.html
@@ -9,7 +9,7 @@
 <div class="container">
 
     <!--Report general information-->
-    <div th:replace="fragments/appointments.html :: reportHeader"></div>
+    <div th:replace="fragments/appointments.html :: body"></div>
 
     <!--No appointments message-->
     <div class="row" th:if="${#lists.isEmpty(attentionTypes)}">
