--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.html
@@ -12,25 +12,23 @@
                 <div fxFlex="100%">
 
                     <div fxLayout="row" fxLayoutAlign="space-between start">
-                        <h3 mat-line class="primary bold element-margin" *ngIf="diagnosticReport.statusId == STUDY_STATUS.REGISTERED.id">
-                            {{STUDY_STATUS.REGISTERED.description}}
+                        <h3 mat-line class="primary bold element-margin">
+                            {{renderStatusDescription(diagnosticReport.statusId)}}
                         </h3>
-                        <h3 mat-line class="primary bold element-margin" *ngIf="diagnosticReport.statusId == STUDY_STATUS.FINAL.id">
-                            {{STUDY_STATUS.FINAL.description}}
-                        </h3>
-                        <h3 mat-line class="primary bold element-margin" *ngIf="diagnosticReport.statusId == STUDY_STATUS.ERROR.id">
-                            {{STUDY_STATUS.ERROR.description}}
-                        </h3>
+
                         <div>
                             <button mat-icon-button [matMenuTriggerFor]="menu" >
                                 <mat-icon>more_vert</mat-icon>
                             </button>
                             <mat-menu #menu="matMenu">
-                                <button mat-menu-item >
+                                <button mat-menu-item *ngIf="diagnosticReport.statusId === STUDY_STATUS.REGISTERED.id">
                                     <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.COMPLETE'"></span>
                                 </button>
-                                <button mat-menu-item >
+                                <button mat-menu-item (click)="deleteStudy(diagnosticReport.id)" *ngIf="diagnosticReport.statusId === STUDY_STATUS.REGISTERED.id">
                                     <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DELETE'"></span>
+                                </button>
+                                <button mat-menu-item *ngIf="diagnosticReport.statusId === STUDY_STATUS.FINAL.id">
+                                    <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SHOW_RESULTS'"></span>
                                 </button>
                             </mat-menu>
                         </div>
