--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.html
@@ -6,66 +6,30 @@
                                 [canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
                                 (openInNew)="openDialogNewStudy()">
 
-    <mat-list id="lista-studies" *ngIf="diagnosticReportsInfo?.length > 0 else noInfo">
+    <mat-list id="lista-estudios" *ngIf="diagnosticReportsInfo?.length > 0 else noInfo">
         <div fxLayout="row" *ngFor="let diagnosticReport of diagnosticReportsInfo">
-            <mat-list-item >
-                <div fxFlex="100%">
-
-                    <div fxLayout="row" fxLayoutAlign="space-between start">
-                        <h3 mat-line class="primary bold element-margin">
-                            {{renderStatusDescription(diagnosticReport.statusId)}}
-                        </h3>
-
-                        <div>
-                            <button mat-icon-button [matMenuTriggerFor]="menu" >
-                                <mat-icon>more_vert</mat-icon>
-                            </button>
-                            <mat-menu #menu="matMenu">
-                                <button mat-menu-item *ngIf="diagnosticReport.statusId === STUDY_STATUS.REGISTERED.id">
-                                    <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.COMPLETE'"></span>
-                                </button>
-                                <button mat-menu-item (click)="deleteStudy(diagnosticReport.id)" *ngIf="diagnosticReport.statusId === STUDY_STATUS.REGISTERED.id">
-                                    <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DELETE'"></span>
-                                </button>
-                                <button mat-menu-item *ngIf="diagnosticReport.statusId === STUDY_STATUS.FINAL.id">
-                                    <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SHOW_RESULTS'"></span>
-                                </button>
-                            </mat-menu>
-                        </div>
-                    </div>
-
-                    <div class="element-margin" fxLayout="column-reverse" fxLayout.gt-sm="row" fxLayoutAlign="space-between start">
-                        <span class="mat-subheading-2 capitalize-first-letter" style="margin: 0" fxFlex="70%">
-                            {{diagnosticReport.snomed.pt}}
-                        </span>
-                        <span mat-line class="mat-body element-light-color">
-                            Orden #{{diagnosticReport.serviceRequestId}}
-                        </span>
-                    </div>
-
-                    <div class="element-margin">
-                        <h3 mat-line class="primary bold capitalize-first-letter">
-                            {{diagnosticReport.healthCondition.snomed.pt}}
-                        </h3>
-                    </div>
-
-                    <div fxLayout="column" fxLayout.gt-sm="row" fxLayoutAlign="space-between start">
-                        <span mat-line class="mat-body capitalize-first-letter element-light-color">
-                            {{diagnosticReport.doctor.firstName }} {{diagnosticReport.doctor.lastName }}
-                        </span>
-                        <span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="diagnosticReport.totalDays == 0"
-                            [translate]="'ambulatoria.paciente.ordenes_prescripciones.DESDE_HOY'">
-                        </span>
-                        <span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="diagnosticReport.totalDays == 1"
-                            [translate]="'ambulatoria.paciente.ordenes_prescripciones.UN_DIA'">
-                        </span>
-                        <span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="diagnosticReport.totalDays > 1">
-                            Hace {{diagnosticReport.totalDays }} días
-                        </span>
-                    </div>
-
+            <app-item-prescripciones fxFlex="100%" mat-list-item class="item-padding" [prescriptionItemData]="prescriptionItemDataBuilder(diagnosticReport)">
+                <div actions>
+                    <button mat-icon-button [matMenuTriggerFor]="menu" >
+                        <mat-icon>more_vert</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                        <button mat-menu-item *ngIf="diagnosticReport.statusId === STUDY_STATUS.REGISTERED.id">
+                            <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.COMPLETE'"></span>
+                        </button>
+                        <button mat-menu-item (click)="deleteStudy(diagnosticReport.id)" *ngIf="diagnosticReport.statusId === STUDY_STATUS.REGISTERED.id">
+                            <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DELETE'"></span>
+                        </button>
+                        <button mat-menu-item *ngIf="diagnosticReport.statusId === STUDY_STATUS.FINAL.id">
+                            <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SHOW_RESULTS'"></span>
+                        </button>
+                    </mat-menu>
                 </div>
-            </mat-list-item>
+
+                <span prescription-number mat-line class="mat-body element-light-color">
+                    Orden #{{diagnosticReport.serviceRequestId}}
+                </span>
+            </app-item-prescripciones>
             <mat-divider></mat-divider>
         </div>
     </mat-list>
