--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/item-prescripciones/item-prescripciones.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/item-prescripciones/item-prescripciones.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="space-between start">
-    <h3 mat-line class="primary bold element-margin">
+    <h3 mat-line class="primary bold mat-subheading-2 element-margin">
         {{prescriptionItemData.prescriptionStatus}}
     </h3>
 
@@ -19,7 +19,7 @@
 <ng-content select="[dosage]"></ng-content>
 
 <div class="element-margin">
-    <h3 mat-line class="primary bold capitalize-first-letter">
+    <h3 mat-line class="primary bold mat-subheading-2 capitalize-first-letter">
         {{prescriptionItemData.problemPt}}
     </h3>
 </div>
