--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
@@ -62,10 +62,10 @@
             <button mat-button class="element-light-color" (click)="openDialogNewMedication(false)">
                 <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.RE_PRESCRIBE'"></span>
             </button>
-            <button mat-button class="element-light-color" *ngIf="checkMedicationStatus(medicationStatus.ACTIVE)" (click)="openSuspendMedicationDialog()">
+            <button mat-button class="element-light-color" *ngIf="checkMedicationStatus(MEDICATION_STATUS.ACTIVE.id)" (click)="openSuspendMedicationDialog()">
                 <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
             </button>
-            <button mat-button class="element-light-color" *ngIf="checkMedicationStatus(medicationStatus.STOPPED)" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE)">
+            <button mat-button class="element-light-color" *ngIf="checkMedicationStatus(MEDICATION_STATUS.STOPPED.id)" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE)">
                 <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.FINALIZE'"></span>
             </button>
         </div>
@@ -92,13 +92,13 @@
                                     <button mat-menu-item (click)="openDialogNewMedication(false, medicationInfo)">
                                         <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.RE_PRESCRIBE'"></span>
                                     </button>
-                                    <button mat-menu-item *ngIf="medicationInfo.statusId === medicationStatus.ACTIVE" (click)="openSuspendMedicationDialog(medicationInfo)">
+                                    <button mat-menu-item *ngIf="medicationInfo.statusId === MEDICATION_STATUS.ACTIVE.id" (click)="openSuspendMedicationDialog(medicationInfo)">
                                         <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
                                     </button>
-                                    <button mat-menu-item *ngIf="medicationInfo.statusId === medicationStatus.SUSPENDED" (click)="changeMedicationStatus(medicationStatusChange.REACTIVATE, medicationInfo)">
+                                    <button mat-menu-item *ngIf="medicationInfo.statusId === MEDICATION_STATUS.SUSPENDED.id" (click)="changeMedicationStatus(medicationStatusChange.REACTIVATE, medicationInfo)">
                                         <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.REACTIVATE'"></span>
                                     </button>
-                                    <button mat-menu-item *ngIf="medicationInfo.statusId !== medicationStatus.STOPPED" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE, medicationInfo)">
+                                    <button mat-menu-item *ngIf="medicationInfo.statusId !== MEDICATION_STATUS.STOPPED.id" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE, medicationInfo)">
                                         <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.FINALIZE'"></span>
                                     </button>
                                 </mat-menu>
