--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
@@ -9,10 +9,7 @@
 		<div id="basic-data" fxLayout="row" fxLayoutGap="50px">
 			<div class="info" fxLayout="column" fxLayoutGap="5px" fxLayoutAlign="space-between">
 				<span>{{ 'guardia.episode.triage.ultimo.NIVEL' | translate }}</span>
-				<span class="triage-chip"
-					  [ngStyle]="{'color':triage.category.id === triages.AMARILLO_NIVEL_3 ? 'black' : 'white' }"
-					  [style.background-color]="triage.category.colorHex">{{ triage.category.name }}
-			</span>
+				<app-triage-chip [category]="triage.category"></app-triage-chip>
 			</div>
 
 			<div class="info" fxLayout="column" fxLayoutGap="6px" fxLayoutAlign="space-between">
